<?xml version="1.0" encoding="utf-8"?>
<layout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <data>
        <import type="com.example.cupones.common.entities.CouponEntity"/>
        <variable
            name="viewModel"
            type="com.example.cupones.viewModel.MainViewModel" />
        <variable
            name="isActive"
            type="Boolean" />
        
        
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MainActivity"
        android:paddingHorizontal="@dimen/common_padding_xl"
        android:paddingVertical="@dimen/common_padding_default">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.5"
            android:orientation="horizontal"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnConsult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_btn_consult"
            android:onClick="@{()->viewModel.consultCouponByCode()}"
            app:layout_constraintBottom_toTopOf="@id/guideLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnCreate"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_btn_create"
            android:onClick="@{() -> viewModel.saveCoupon()}"
            app:isGone="@{isActive}"
            tools:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnConsult"
            app:layout_constraintBottom_toTopOf="@id/guideLine"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/main_text_coupons"
            app:isNewCoupon="@{isActive}"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textAlignment="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCoupon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btnConsult"
            android:layout_marginBottom="@dimen/common_padding_default"
            android:hint="@string/main_hint_coupons"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCoupon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/main_hint_coupons"
                android:text="@={viewModel.coupon.code}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tilCoupon"
            android:hint="@{isActive ? @string/main_hint_active : @string/main_text_description}"
            android:enabled="@{!isActive}"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/main_hint_description"
                android:text="@={viewModel.coupon.description}"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                />

        </com.google.android.material.textfield.TextInputLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>